--- a/learnyounode/index.html
+++ b/learnyounode/index.html
@@ -20,6 +20,10 @@
         <!-- Code syntax highlighting -->
         <link rel="stylesheet" href="lib/css/zenburn.css">
 
+        <style type="text/css">
+            .terminal { text-align: left; }
+        </style>
+
         <!-- Printing and PDF exports -->
         <script>
 var link = document.createElement( 'link' );
@@ -76,16 +80,16 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 
                     <section>
                         <h2>node?</h2>
-                        <pre><code data-trim contenteditable>
-                        node -v
-                        </code></pre>
+                        <div class="terminal type-text">
+                        node -v \n
+                        </div>
                     </section>
 
                     <section>
                         <h2>npm?</h2>
-                        <pre><code data-trim contenteditable>
-                        npm -v
-                        </code></pre>
+                        <div class="terminal type-text">
+                        npm -v \n
+                        </div>
                     </section>
                 </section>
 
@@ -93,17 +97,17 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
                     <section><h2>overview</h2></section>
                     <section>
                         <h2>install it</h2>
-                        <pre><code data-trim contenteditable>
-                        npm i learnyounode -g
-                        </code></pre>
+                        <div class="terminal type-text">
+                        npm i learnyounode -g \n
+                        </div>
                         <small>i is shorthand for install</small><br/>
                         <small>-g means install it globally</small>
                     </section>
                     <section>
-                        <h2>run it</h2>
-                        <pre><code data-trim contenteditable>
-                        learnyounode
-                        </code></pre>
+                        <h2 >run it</h2>
+                        <div class="terminal type-text">
+                            learnyounode \n
+                        </div>
                     </section>
                     <section>
                         <img src="workshopper.png"/>
@@ -124,7 +128,36 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
         <script src="lib/js/head.min.js"></script>
         <script src="js/reveal.js"></script>
 
+        <script src="js/jquery-1.11.3.min.js"></script>
+        <script src="js/jquery.teletype.min.js"></script>
         <script>
+
+
+$( function() {
+    $( '.type-text' ).each( function() {
+        var items = $( this ).text();
+        $( this ).empty().attr( 'title', '' ).teletype( {
+            text: $.map( items.split( ';' ), $.trim ), // List of strings to output.
+            typeDelay: 10, // Minimum delay, in ms, between typing characters.
+            backDelay: 20, // Minimum delay, in ms, between deleting characters.
+            blinkSpeed: 1000, // Interval, in ms, that the cursor will flash.
+            cursor: '▋', // Character used to represent the cursor.
+            delay: 3000, // Time in ms to pause before deleting the current text.
+            preserve: false, // Prevent auto delete of the current string and begin outputting the next string.
+            prefix: '$ ', // Begin each string with this prefix value.
+            loop: 0, // Number of times to loop through the output strings, for unlimited use 0.
+            humanise: true // Add a random delay before each character to represent human interaction.
+        } );
+    } );
+} );
+
+
+
+Reveal.addEventListener( 'slidechanged', function( event ) {
+    // event.previousSlide, event.currentSlide, event.indexh, event.indexv
+    var elementsToType = $(event.currentSlide).find(".type-text");
+
+} );
 
 // Full list of configuration options available at:
 // https://github.com/hakimel/reveal.js#configuration
