--- a/learnyounode/index.html
+++ b/learnyounode/index.html
@@ -119,7 +119,16 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
                         <img src="hello_world_solution.png"/>
                     </section>
                     <section>
+                        <h2 >verify it</h2>
+                        <div class="terminal type-text">
+                            learnyounode verify hello_world.js
+                        </div>
+                    </section>
+                    <section>
                         <img src="hello_world_verified.png"/>
+                    </section>
+                    <section>
+                        <iframe src="//giphy.com/embed/TsD8LGhM5jgs0" width="480" height="648" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
                     </section>
                 </section>
             </div>
